syntax = "proto3";
package DomainServices.OfferService;
option csharp_namespace = "DomainServices.OfferService.Contracts";

message UpdateOfferDocumentIdRequest {
	int32 OfferId = 1;

	string DocumentId = 2;
}